@@ -93,6 +93,7 @@ Feature Additions:
  -- Add mux_UnmarshalInterface() call to libmux.
  -- Add ShutdownSlave method to ISlaveControl.
  -- Add sqlslave and sqlproxy modules for AsyncSQL.
+ -- Add chanobj() per issue 401.
 
 
 Bug Fixes:
@@ -186,9 +187,11 @@ Bug Fixes:
     '<name> test' (Issue 351).
  -- Fix --enable-deprecated build (Issue 397).
  -- Pass reality level descriptions through @descformat (Issue 59).
+ -- Fix regression (r1355) which allowed an endless loop (Issue 403).
+ -- Fix buffer overflow with %=<> substitution (Issue 406).
 
 
-Performance Enhancements:
+Performanc  Enhancements:
 ~~~~~~~~~~~~~~~~~~~~~~~~
  -- Help entries use less memory (specific improvements described in
     Issue 238 comments).  Thanks Alierak.
@@ -237,3 +240,4 @@ Miscellaneous:
  -- Updated graball() help topic.
  -- Updated if()/ifelse() help topic.
  -- Updated report help topic.
+ -- Updated @comon help topic.
